Update the README file

--- a/env.example
+++ b/env.example
@@ -1,20 +1,41 @@
+# =============================================================================
+# FitTracker Environment Configuration
+# =============================================================================
+
 # Django Settings
+# =============================================================================
+SECRET_KEY=your-super-secret-key-change-this-in-production
 DEBUG=True
-SECRET_KEY=your-secret-key-here-change-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
-# Database
-DATABASE_URL=postgresql://fittracker_user:fittracker_password@localhost:5432/fittracker
-DB_NAME=fittracker
-DB_USER=fittracker_user
-DB_PASSWORD=fittracker_password
-DB_HOST=localhost
-DB_PORT=5432
+# Database Configuration (AWS RDS MySQL)
+# =============================================================================
+DATABASE_URL=mysql://admin:Alpha*FitTracker*5@fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com:3306/FitTrackerDB
 
-# Redis
+# Alternative database settings (if not using DATABASE_URL)
+DB_ENGINE=django.db.backends.mysql
+DB_HOST=fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com
+DB_PORT=3306
+DB_NAME=FitTrackerDB
+DB_USER=admin
+DB_PASSWORD=Alpha*FitTracker*5
+
+# JWT Authentication Settings
+# =============================================================================
+JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production
+JWT_ACCESS_TOKEN_LIFETIME=5  # hours
+JWT_REFRESH_TOKEN_LIFETIME=1  # days
+JWT_ALGORITHM=HS256
+
+# Redis Configuration (for caching - planned)
+# =============================================================================
 REDIS_URL=redis://localhost:6379/0
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
 
-# Email (for password reset, etc.)
+# Email Configuration
+# =============================================================================
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
@@ -22,22 +43,46 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 
-# API Keys (if needed)
-# GOOGLE_MAPS_API_KEY=your-google-maps-api-key
-# STRIPE_SECRET_KEY=your-stripe-secret-key
-# STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key
+# AWS Configuration
+# =============================================================================
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+AWS_STORAGE_BUCKET_NAME=your-s3-bucket-name
+AWS_S3_REGION_NAME=us-east-1
 
-# File Storage
-MEDIA_URL=/media/
-STATIC_URL=/static/
-MEDIA_ROOT=media/
-STATIC_ROOT=staticfiles/
-
-# CORS Settings
+# Frontend Configuration
+# =============================================================================
+FRONTEND_URL=http://localhost:3000
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-CORS_ALLOW_CREDENTIALS=True
 
-# JWT Settings
-JWT_SECRET_KEY=your-jwt-secret-key
-JWT_ACCESS_TOKEN_LIFETIME=5
-JWT_REFRESH_TOKEN_LIFETIME=1
+# API Configuration
+# =============================================================================
+API_VERSION=v1
+API_PREFIX=api
+
+# Logging Configuration
+# =============================================================================
+LOG_LEVEL=INFO
+LOG_FILE=logs/fittracker.log
+
+# Security Settings
+# =============================================================================
+CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+SESSION_COOKIE_SECURE=False  # Set to True in production with HTTPS
+CSRF_COOKIE_SECURE=False     # Set to True in production with HTTPS
+
+# Development Settings
+# =============================================================================
+USE_DEBUG_TOOLBAR=False
+ENABLE_SILK_PROFILING=False
+
+# Production Settings (override these in production)
+# =============================================================================
+# DEBUG=False
+# ALLOWED_HOSTS=your-domain.com,www.your-domain.com
+# SESSION_COOKIE_SECURE=True
+# CSRF_COOKIE_SECURE=True
+# SECURE_SSL_REDIRECT=True
+# SECURE_HSTS_SECONDS=31536000
+# SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+# SECURE_HSTS_PRELOAD=True
