--- a/env.example
+++ b/env.example
@@ -1,18 +1,28 @@
 # =============================================================================
 # FitTracker Environment Configuration
 # =============================================================================
+# This file serves as a template for environment variables.
+# Copy this file to .env and fill in your actual values.
+# NEVER commit the .env file with real secrets!
 
 # Django Settings
 # =============================================================================
+# Django secret key for cryptographic signing
+# Generate a new one: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
 SECRET_KEY=your-super-secret-key-change-this-in-production
+
+# Debug mode (set to False in production)
 DEBUG=True
+
+# Comma-separated list of allowed hosts
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
 # Database Configuration (AWS RDS MySQL)
 # =============================================================================
+# Option 1: Use DATABASE_URL (recommended)
 DATABASE_URL=mysql://admin:Alpha*FitTracker*5@fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com:3306/FitTrackerDB
 
-# Alternative database settings (if not using DATABASE_URL)
+# Option 2: Use individual database settings
 DB_ENGINE=django.db.backends.mysql
 DB_HOST=fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com
 DB_PORT=3306
@@ -22,21 +32,31 @@ DB_PASSWORD=Alpha*FitTracker*5
 
 # JWT Authentication Settings
 # =============================================================================
+# JWT secret key (different from Django SECRET_KEY)
+# Generate: python -c "import secrets; print(secrets.token_urlsafe(32))"
 JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production
+
+# Token lifetimes in hours/days
 JWT_ACCESS_TOKEN_LIFETIME=5  # hours
 JWT_REFRESH_TOKEN_LIFETIME=1  # days
 JWT_ALGORITHM=HS256
 
-# Redis Configuration (for caching - planned)
+# Redis Configuration (for caching - planned implementation)
 # =============================================================================
+# Redis connection URL
 REDIS_URL=redis://localhost:6379/0
+
+# Individual Redis settings
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
 
 # Email Configuration
 # =============================================================================
+# Email backend (smtp, console, file)
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+
+# SMTP settings (example for Gmail)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
@@ -45,6 +65,7 @@ EMAIL_HOST_PASSWORD=your-app-password
 
 # AWS Configuration
 # =============================================================================
+# AWS credentials for S3 storage
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_STORAGE_BUCKET_NAME=your-s3-bucket-name
@@ -52,32 +73,47 @@ AWS_S3_REGION_NAME=us-east-1
 
 # Frontend Configuration
 # =============================================================================
+# Frontend URL for CORS and redirects
 FRONTEND_URL=http://localhost:3000
+
+# CORS allowed origins (comma-separated)
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # API Configuration
 # =============================================================================
+# API version and prefix
 API_VERSION=v1
 API_PREFIX=api
 
 # Logging Configuration
 # =============================================================================
+# Log level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
+
+# Log file path
 LOG_FILE=logs/fittracker.log
 
 # Security Settings
 # =============================================================================
+# CSRF trusted origins (comma-separated)
 CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-SESSION_COOKIE_SECURE=False  # Set to True in production with HTTPS
-CSRF_COOKIE_SECURE=False     # Set to True in production with HTTPS
+
+# Cookie security (set to True in production with HTTPS)
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
 
 # Development Settings
 # =============================================================================
+# Django Debug Toolbar (for development)
 USE_DEBUG_TOOLBAR=False
+
+# Silk profiling (for performance monitoring)
 ENABLE_SILK_PROFILING=False
 
 # Production Settings (override these in production)
 # =============================================================================
+# Uncomment and modify these for production deployment
+
 # DEBUG=False
 # ALLOWED_HOSTS=your-domain.com,www.your-domain.com
 # SESSION_COOKIE_SECURE=True
@@ -86,3 +122,40 @@ ENABLE_SILK_PROFILING=False
 # SECURE_HSTS_SECONDS=31536000
 # SECURE_HSTS_INCLUDE_SUBDOMAINS=True
 # SECURE_HSTS_PRELOAD=True
+
+# Additional Production Settings
+# =============================================================================
+# Time zone
+# TIME_ZONE=UTC
+
+# Static files settings
+# STATIC_URL=/static/
+# STATIC_ROOT=/var/www/static/
+
+# Media files settings
+# MEDIA_URL=/media/
+# MEDIA_ROOT=/var/www/media/
+
+# Database connection pool settings
+# DB_CONN_MAX_AGE=600
+# DB_OPTIONS={"charset": "utf8mb4"}
+
+# Cache settings
+# CACHE_BACKEND=django.core.cache.backends.redis.RedisCache
+# CACHE_LOCATION=redis://localhost:6379/1
+
+# Session settings
+# SESSION_ENGINE=django.contrib.sessions.backends.cache
+# SESSION_CACHE_ALIAS=default
+
+# =============================================================================
+# IMPORTANT SECURITY NOTES:
+# =============================================================================
+# 1. NEVER commit .env file with real secrets
+# 2. Use strong, unique passwords
+# 3. Rotate secrets regularly
+# 4. Use environment-specific settings
+# 5. Enable HTTPS in production
+# 6. Use AWS IAM roles when possible
+# 7. Monitor access logs
+# =============================================================================
