docker working with the backend and update database, and implemented aditional features

--- a/env.example
+++ b/env.example
@@ -20,13 +20,13 @@ ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 # Database Configuration (AWS RDS MySQL)
 # =============================================================================
 # Option 1: Use DATABASE_URL (recommended)
-DATABASE_URL=mysql://admin:Alpha*FitTracker*5@fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com:3306/FitTrackerDB
+DATABASE_URL=mysql://admin:Alpha*FitTracker*5@fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com:3306/fittracker
 
 # Option 2: Use individual database settings
 DB_ENGINE=django.db.backends.mysql
 DB_HOST=fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_NAME=FitTrackerDB
+DB_NAME=fittracker
 DB_USER=admin
 DB_PASSWORD=Alpha*FitTracker*5
 
@@ -70,6 +70,20 @@ AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_STORAGE_BUCKET_NAME=your-s3-bucket-name
 AWS_S3_REGION_NAME=us-east-1
+
+# External APIs Configuration
+# =============================================================================
+# API Ninja - Nutrition and Exercise Data
+# Get your API key from: https://api-ninjas.com/
+API_NINJA_KEY=your-api-ninja-key-here
+
+# API Ninja base URL
+API_NINJA_BASE_URL=https://api.api-ninjas.com/v1
+
+# Other external APIs can be added here
+# Example: OpenWeatherMap, Google Maps, etc.
+# WEATHER_API_KEY=your-weather-api-key
+# GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
 # Frontend Configuration
 # =============================================================================
