--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,7 @@
 version: '3.8'
 
 services:
-  # MySQL Database (for local development)
-  # Note: In production, use AWS RDS MySQL
-  db:
-    image: mysql:8.0
-    environment:
-      MYSQL_DATABASE: FitTrackerDB
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: Alpha*FitTracker*5
-      MYSQL_ROOT_PASSWORD: root_password
-    volumes:
-      - mysql_data:/var/lib/mysql
-    ports:
-      - "3306:3306"
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "admin", "-pAlpha*FitTracker*5"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    command: --default-authentication-plugin=mysql_native_password
-
-  # Redis for caching (planned implementation)
+  # Redis for caching (local for development)
   redis:
     image: redis:7-alpine
     ports:
@@ -41,16 +21,22 @@ services:
       dockerfile: Dockerfile
     environment:
       - DEBUG=True
-      # Use local MySQL for development
-      - DATABASE_URL=mysql://admin:Alpha*FitTracker*5@db:3306/FitTrackerDB
-      # For production, use AWS RDS:
-      # - DATABASE_URL=mysql://admin:Alpha*FitTracker*5@fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com:3306/FitTrackerDB
+      # Use MySQL for production
+      - USE_SQLITE=False
+      - DB_NAME=fittracker
+      - DB_USER=admin
+      - DB_PASSWORD=Alpha*FitTracker*5
+      - DB_HOST=fittrackdb.ceja6aik6pl1.us-east-1.rds.amazonaws.com
+      - DB_PORT=3306
       - REDIS_URL=redis://redis:6379/0
       - SECRET_KEY=your-secret-key-here-change-in-production
       - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
       - JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
       - JWT_ACCESS_TOKEN_LIFETIME=5
       - JWT_REFRESH_TOKEN_LIFETIME=1
+      # External APIs
+      - API_NINJA_KEY=your-api-ninja-key-here
+      - API_NINJA_BASE_URL=https://api.api-ninjas.com/v1
     volumes:
       - ./backend:/app
       - static_volume:/app/staticfiles
@@ -58,8 +44,6 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      db:
-        condition: service_healthy
       redis:
         condition: service_healthy
     command: >
@@ -67,17 +51,25 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py runserver 0.0.0.0:8000"
 
-  # Flutter Frontend (Web)
+  # Flutter Frontend (Web) - Development
   frontend:
     build:
       context: ./frontend/fittracker_app
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
-      - "3000:80"
+      - "3000:3000"
     depends_on:
       - backend
     environment:
-      - REACT_APP_API_URL=http://localhost:8000/api/v1
+      - API_URL=http://localhost:8000/api/v1
+    volumes:
+      - ./frontend/fittracker_app/lib:/home/developer/lib
+      - ./frontend/fittracker_app/pubspec.yaml:/home/developer/pubspec.yaml
+      - ./frontend/fittracker_app/assets:/home/developer/assets
+      - ./frontend/fittracker_app/app:/home/developer/app
+      - ./frontend/fittracker_app/features:/home/developer/features
+      - ./frontend/fittracker_app/test:/home/developer/test
+      - /home/developer/.pub-cache
 
   # Nginx Reverse Proxy (optional)
   nginx:
@@ -93,7 +85,6 @@ services:
       - production
 
 volumes:
-  mysql_data:
   redis_data:
   static_volume:
   media_volume:
