--- a/frontend/fittracker_app/Dockerfile.dev
+++ b/frontend/fittracker_app/Dockerfile.dev
@@ -1,5 +1,5 @@
-# Build stage
-FROM ubuntu:22.04 AS build
+# Development stage
+FROM ubuntu:22.04
 
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
@@ -18,15 +18,20 @@ RUN apt-get update && apt-get install -y \
 
 # Set up new user
 RUN useradd --create-home --shell /bin/bash developer
-USER developer
 WORKDIR /home/developer
 
-# Download Flutter SDK directly (more reliable than git clone)
+# Download Flutter SDK directly
 RUN wget -O flutter.tar.xz https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.19.6-stable.tar.xz \
     && tar xf flutter.tar.xz \
-    && rm flutter.tar.xz
+    && rm flutter.tar.xz \
+    && chown -R developer:developer /home/developer
 
-ENV PATH="$PATH:/home/developer/flutter/bin"
+# Set environment variables
+ENV PATH="/home/developer/flutter/bin:$PATH"
+ENV FLUTTER_ROOT="/home/developer/flutter"
+
+# Switch to developer user
+USER developer
 
 # Copy the app files to the container
 COPY --chown=developer:developer . .
@@ -40,20 +45,8 @@ RUN flutter config --enable-web
 # Get app dependencies
 RUN flutter pub get
 
-# Build the app for the web
-RUN flutter build web
+# Expose port 3000 for Flutter web
+EXPOSE 3000
 
-# Production stage
-FROM nginx:alpine
-
-# Copy the built app from the build stage
-COPY --from=build /home/developer/build/web /usr/share/nginx/html
-
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
-
-# Expose port 80
-EXPOSE 80
-
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Start Flutter web server
+CMD ["/home/developer/flutter/bin/flutter", "run", "-d", "web-server", "--web-port", "3000", "--web-hostname", "0.0.0.0"]
