--- a/env.example
+++ b/env.example
@@ -41,3 +41,7 @@ CORS_ALLOW_CREDENTIALS=True
 JWT_SECRET_KEY=your-jwt-secret-key
 JWT_ACCESS_TOKEN_LIFETIME=5
 JWT_REFRESH_TOKEN_LIFETIME=1
+
+# API NINJA
+API_NINJA_KEY='n6ou0W+GEJfS20DbFPCvWA==3RuTgcuOXRykkFa3'
+API_NINJA_BASE_URL=https://api.api-ninjas.com/v1 
