Implementacion del backend

--- a/env.example
+++ b/env.example
@@ -173,3 +173,9 @@ ENABLE_SILK_PROFILING=False
 # 6. Use AWS IAM roles when possible
 # 7. Monitor access logs
 # =============================================================================
+
+# API NINJA
+SECRET_KEY=django-insecure-j0@quqxy!$=3)@j^9afrg7-wy3sqqvhplekm2&403mq9fy4x07
+DEBUG=True
+ALLOWED_HOSTS=127.0.0.1,localhost
+API_NINJA_KEY=n6ou0W+GEJfS20DbFPCvWA==3RuTgcuOXRykkFa3
