Modified and deleted spanish comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -154,7 +154,7 @@
   "breadcrumbs.enabled": true,
 
   // Minimap
-  "editor.minimap.enabled": true,
+  "editor.minimap.enabled": false,
 
   // Bracket Pair Colorization
   "editor.bracketPairColorization.enabled": true,
