--- a/frontend/fittracker_app/pubspec.yaml
+++ b/frontend/fittracker_app/pubspec.yaml
@@ -1,49 +1,96 @@
 name: fittracker_app
-description: A comprehensive fitness tracking application built with Flutter.
+description: "A comprehensive fitness tracking application"
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
-  flutter: ">=3.19.0"
+  sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
+  # UI & Design
+  cupertino_icons: ^1.0.2
+  google_fonts: ^6.1.0
+  flutter_svg: ^2.0.9
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
+  lottie: ^2.7.0
+
   # State Management
+  provider: ^6.1.1
+  riverpod: ^2.4.9
   flutter_riverpod: ^2.4.9
-  riverpod_annotation: ^2.3.3
 
   # Navigation
-  go_router: ^13.2.0
+  go_router: ^12.1.3
 
-  # HTTP Client
+  # HTTP & API
   dio: ^5.4.0
+  retrofit: ^4.0.3
+  json_annotation: ^4.8.1
 
-  # UI Components
-  cupertino_icons: ^1.0.6
-
-  # Local Storage
+  # Authentication & Storage
   shared_preferences: ^2.2.2
-
-  # Authentication
   flutter_secure_storage: ^9.0.0
+  jwt_decoder: ^2.0.1
 
-  # Date and Time
+  # Charts & Analytics
+  fl_chart: ^0.66.0
+  syncfusion_flutter_charts: ^24.1.41
+
+  # Date & Time
   intl: ^0.19.0
+  table_calendar: ^3.0.9
+
+  # Forms & Input
+  flutter_form_builder: ^9.1.1
+  form_builder_validators: ^9.1.0
+  image_picker: ^1.0.4
+
+  # Utilities
+  uuid: ^4.2.1
+  permission_handler: ^11.1.0
+  url_launcher: ^6.2.2
+  package_info_plus: ^4.2.0
+  device_info_plus: ^9.1.1
+
+  # Localization
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # Code Generation
-  riverpod_generator: ^2.3.9
+  flutter_lints: ^3.0.0
   build_runner: ^2.4.7
-
-  # Linting
-  flutter_lints: ^3.0.1
+  retrofit_generator: ^7.0.8
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/fonts/
+    - assets/animations/
+
+  fonts:
+    - family: TheSeasons
+      fonts:
+        - asset: assets/fonts/Fontspring-DEMO-theseasons-reg.otf
+        - asset: assets/fonts/Fontspring-DEMO-theseasons-bd.otf
+          weight: 700
+        - asset: assets/fonts/Fontspring-DEMO-theseasons-it.otf
+          style: italic
+        - asset: assets/fonts/Fontspring-DEMO-theseasons-bdit.otf
+          weight: 700
+          style: italic
+        - asset: assets/fonts/Fontspring-DEMO-theseasons-lt.otf
+          weight: 300
+        - asset: assets/fonts/Fontspring-DEMO-theseasons-ltit.otf
+          weight: 300
+          style: italic
