--- a/frontend/fittracker_app/pubspec.yaml
+++ b/frontend/fittracker_app/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
-  lottie: ^2.7.0
+  lottie: ^3.3.1
 
   # State Management
   provider: ^6.1.1
@@ -25,7 +25,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
 
   # Navigation
-  go_router: ^12.1.3
+  go_router: ^16.2.0
 
   # HTTP & API
   dio: ^5.4.0
@@ -38,24 +38,24 @@ dependencies:
   jwt_decoder: ^2.0.1
 
   # Charts & Analytics
-  fl_chart: ^0.66.0
-  syncfusion_flutter_charts: ^24.1.41
+  fl_chart: ^1.0.0
+  syncfusion_flutter_charts: ^30.2.6+1
 
   # Date & Time
-  intl: ^0.19.0
+  intl: ^0.20.2
   table_calendar: ^3.0.9
 
   # Forms & Input
-  flutter_form_builder: ^9.1.1
-  form_builder_validators: ^9.1.0
+  flutter_form_builder: ^10.2.0
+  form_builder_validators: ^11.2.0
   image_picker: ^1.0.4
 
   # Utilities
   uuid: ^4.2.1
-  permission_handler: ^11.1.0
+  permission_handler: ^12.0.1
   url_launcher: ^6.2.2
-  package_info_plus: ^4.2.0
-  device_info_plus: ^9.1.1
+  package_info_plus: ^8.3.1
+  device_info_plus: ^11.5.0
 
   # Localization
   flutter_localizations:
@@ -64,9 +64,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.7
-  retrofit_generator: ^7.0.8
+  retrofit_generator: ^10.0.2
   json_serializable: ^6.7.1
 
 flutter:
