--- a/frontend/fittracker_app/android/app/src/main/AndroidManifest.xml
+++ b/frontend/fittracker_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="fittracker_app"
+        android:label="fittracker_app_new"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
