--- a/frontend/fittracker_app/pubspec.yaml
+++ b/frontend/fittracker_app/pubspec.yaml
@@ -1,59 +1,53 @@
 name: fittracker_app
-description: "A comprehensive fitness tracking application"
+description: "FitTracker - Tu compañero de fitness personal"
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ^3.9.0
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # UI & Design
-  cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
-  flutter_svg: ^2.0.9
-  cached_network_image: ^3.3.0
+  # UI & Design - Solo lo esencial
+  cupertino_icons: ^1.0.8
+  google_fonts: ^6.3.1
+  flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.4.1
   shimmer: ^3.0.0
-  lottie: ^3.3.1
 
-  # State Management
-  provider: ^6.1.1
-  riverpod: ^2.4.9
-  flutter_riverpod: ^2.4.9
+  # State Management - Solo Riverpod
+  flutter_riverpod: ^2.6.1
 
   # Navigation
-  go_router: ^16.2.0
+  go_router: ^16.2.1
 
-  # HTTP & API
-  dio: ^5.4.0
-  retrofit: ^4.0.3
-  json_annotation: ^4.8.1
+  # HTTP & API - Solo Dio
+  dio: ^5.7.0
+  json_annotation: ^4.9.0
 
-  # Authentication & Storage
-  shared_preferences: ^2.2.2
-  flutter_secure_storage: ^9.0.0
+  # Storage - Solo SharedPreferences
+  shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.2
   jwt_decoder: ^2.0.1
 
   # Charts & Analytics
   fl_chart: ^1.0.0
-  syncfusion_flutter_charts: ^30.2.6+1
 
   # Date & Time
   intl: ^0.20.2
-  table_calendar: ^3.0.9
+  table_calendar: ^3.1.2
 
   # Forms & Input
   flutter_form_builder: ^10.2.0
   form_builder_validators: ^11.2.0
-  image_picker: ^1.0.4
+  image_picker: ^1.2.0
 
   # Utilities
-  uuid: ^4.2.1
-  permission_handler: ^12.0.1
-  url_launcher: ^6.2.2
+  uuid: ^4.5.1
+  url_launcher: ^6.3.1
   package_info_plus: ^8.3.1
   device_info_plus: ^11.5.0
 
@@ -64,10 +58,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
-  build_runner: ^2.4.7
-  retrofit_generator: ^10.0.2
-  json_serializable: ^6.7.1
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.11.0
 
 flutter:
   uses-material-design: true
@@ -76,7 +69,6 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
-    - assets/animations/
 
   fonts:
     - family: TheSeasons
